# nitrous

./: Cargo.toml  README.md  arm9  index.html
.github/workflows/: build-web.yml  deploy-web.yml
docs/: links.md  melonDS.md  notes.md
src/: emulator.rs  main.rs
src/arm/: arm9.rs  mod.rs  models.rs
src/nds/: bits.rs  cartridge.rs  cp15.rs  div.rs  dma.rs  emulator.rs  interrupts.rs  logger.rs  memory.rs  mod.rs  spi.rs  sqrt.rs  timers.rs
src/nds/arm/: arm.rs  fake.rs  mod.rs  rw.rs  t.rs
src/nds/arm/bus/: bus7.rs  bus9.rs  mod.rs
src/nds/arm/instructions/: conditions.rs  lookup.rs  mod.rs
src/nds/arm/instructions/arm/: conditions.rs  instruction.rs  lookup.rs  mod.rs  run.rs
src/nds/arm/instructions/thumb/: instruction.rs  lookup.rs  mod.rs  run.rs
src/nds/arm/models/: ctx.rs  disassembly.rs  haltcnt.rs  kind.rs  mod.rs  psr.rs  registers.rs  stacktrace.rs
src/nds/bus/: bus7.rs  bus9.rs  mod.rs
src/nds/cart/: mod.rs
src/nds/cart/models/: auxspicnt.rs  command.rs  exmem.rs  metadata.rs  mod.rs  romctrl.rs
src/nds/cpu/: arm9.rs  bus.rs  mod.rs
src/nds/cpu/arm/: arm.rs  mod.rs
src/nds/cpu/arm/bus/: bus7.rs  bus9.rs  mod.rs
src/nds/cpu/arm/instructions/: conditions.rs  lookup.rs  mod.rs  run.rs
src/nds/cpu/arm/models/: ctx.rs  instruction.rs  keyinput.rs  mod.rs  powcnt.rs  psr.rs  registers.rs
src/nds/cpu/arm9/: arm9.rs  mod.rs  models.rs
src/nds/cpu/arm9/instructions/: conditions.rs  lookup.rs  mod.rs  models.rs  run.rs
src/nds/cpu/arm9/models/: bits.rs  ctx.rs  disassembly.rs  instruction.rs  keyinput.rs  mod.rs  powcnt.rs  psr.rs  registers.rs
src/nds/dma/: mod.rs  models.rs
src/nds/gpu/: gpu2d.rs  mod.rs
src/nds/gpu/gpu2d/: models.rs
src/nds/gpu/models/: bgxcnt.rs  dispcnt.rs  dispstat.rs  mod.rs
src/nds/gpus/: mod.rs
src/nds/gpus/gpu2d/: mod.rs
src/nds/gpus/gpu2d/models/: bgxcnt.rs  colorfx.rs  dispcnt.rs  mod.rs
src/nds/gpus/gpu2d/rendering/: mod.rs  vram_display.rs
src/nds/gpus/models/: dispstat.rs  mod.rs
src/nds/gpus/vram/: bank.rs  mod.rs  models.rs
src/nds/shared/: mod.rs
src/nds/shared/models/: extkeyin.rs  keyinput.rs  mod.rs  postflg.rs  powcnt.rs
src/nds/shared/models/ipc/: ipcfifo.rs  ipcsync.rs  mod.rs
src/ui/: fps_info.rs  init.rs  input.rs  main.rs  mod.rs  navbar.rs  screens.rs  window.rs
src/ui/helpers/: mod.rs  ui.rs  window.rs
src/ui/windows/: arm9_info.rs  emulation_log.rs  fps_info.rs  memory_viewer.rs  mod.rs  test_window.rs
src/ui/windows/debug/: arm9_disassembler.rs  arm9_info.rs  arm_disassembler.rs  arm_info.rs  benchmark.rs  emulation_log.rs  gpu2d_info.rs  ipcsync.rs  memory_viewer.rs  mod.rs  register_viewer.rs  test_window.rs
src/ui/windows/debug/arm/: mod.rs
src/ui/windows/file/: preferences.rs
(+270 files in other folders)
