[package]
name = "idea"
version = "0.0.0"
edition = "2021"

[dependencies]
bitflags = "2.4.1"
chrono = "0.4.33"
coarsetime = "0.1.34"
eframe = { version = "0.26.0", features = ["persistence"] }
egui = { version = "0.26.0", features = ["log", "persistence"] }
egui-phosphor = "0.4.0"
egui_extras = "0.26.0"
log = "0.4.20"
once_cell = "1.19.0"
rfd = "0.14.1"
serde = { version = "1.0.195", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.1"
futures = "0.3.30"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.39"

[features]
epic = []

# TODO: experiment with this later on
# normally it's set to 3 but 2 results in a smaller binary (at least in wasm)
# see which is faster
# opt-level = 2

[profile.release]
lto = true
