[package]
name = "NitrousDS"
version = "0.0.0"
edition = "2021"
rust-version = "1.80"

[dependencies]
bitflags = "2.6.0"
chrono = "0.4.38"
eframe = { version = "0.28.1", features = ["persistence"] }
egui = { version = "0.28.1", features = ["log", "persistence"] }
egui-phosphor = "0.6.0"
egui_extras = "0.28.1"
flate2 = "1.0.35"
log = "0.4.22"
num-traits = "0.2.19"
once_cell = "1.19.0"
rfd = "0.14.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
web-time = "1.1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.5"
futures = "0.3.30"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.43"

[features]
epic = []

# TODO: experiment with this later on
# normally it's set to 3 but 2 results in a smaller binary (at least in wasm)
# see which is faster
# opt-level = 2

# [profile.release]
# lto = true

[profile.profiling]
inherits = "release"
debug = true
